# remeRS

./: .gitignore  Cargo.toml  remind_data.json
src/: main.rs
src/daemon/: daemon.rs
src/reminder/: reminder.rs
src/writer/: writer.rs
