[package]
name = "remeRS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.5.0"
log = "0.4.20"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
notify-rust = "4.9.0"
serde = {version="1.0.192", features=["derive"]}
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
